# optimization.cpp

./: .gitattributes  .gitignore  README.md  benchmark.py  pyproject.toml  run.sh
async/: main.cpp
false_sharing/: main.cc  main.cpp
loop_unroll/: Makefile  main.cpp
openmp/: main.cpp
py_utils/: __init__.py  builder.py  plot.py  result_model.py  system_information.py
spatial_locality/: main.cpp
techniques/: run.sh
techniques/async/: README.md  main.cpp
techniques/false_sharing/: README.md  main.cpp
techniques/loop_unroll/: README.md  main.cpp
techniques/openmp/: README.md  main.cpp
techniques/spatial_locality/: README.md  main.cpp
techniques/temporal_locality/: main.cpp
temporal_locality/: main.cc  main.cpp
utils/: benchmark.h  function.h
