[tool.poetry]
name = "optimization-cpp"
version = "0.1.0"
description = ""
authors = ["BayernMuller <cjjunk29@gmail.com>"]
readme = "README.md"
packages = [{include = "optimization"}]

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.22.0"
psutil = "^5.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
